# rmr-alertas

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dags/: pipeline_15min_apac.py  pipeline_pepluvi.py
docs/: runbook.md
docs/adr/: 0001-escolha-duckdb.md  0002-migracao-parquet.md
include/config/: settings.py
include/pipeline/extract/: dados_15min_apac.py  ingest_muni.py  scraping_apac.py  valid_data.py
include/pipeline/load/: ingest_duckdb.py
rmr-api/: main.py  requirements.txt
rmr-web/: package-lock.json  package.json
rmr-web/app/: page.tsx
transform/: .user.yml  dbt_project.yml  profiles.yml
transform/macros/: clean_string.sql
transform/models/bronze/: .gitkeep  brz_api_cemaden.sql  sources.yml  stg_ibge_municipios_pe.sql
transform/models/gold/: gold_grid_risk.sql  schema.yml
transform/models/silver/: mapeamento_estacoes.sql  monitoramento_pluviometrico.sql  schema.yml
